# mindful-agents

./: README.md  app.py  pyproject.toml  requirements.txt
src/: tes.py
src/mindful_agents/: __init__.py  api.py  data.py
src/mindful_agents/templates/: index.py
src/mindful_client/: __init__.py  __mf__.py  api.py  mf.py  wui.py
src/mindful_client/templates/: idx.py
